# TGMotor

./: .gitignore  CMakeLists.txt  README.md
include/: TGMErrors.h  asset_manager.h  entity.h  g_constants.h  game.h  game_map.h  renderer.h  stage.h  texture_manager.h
include/ECS/: ECS.h  animation.h  asset_manager.h  entity_gen.h  entity_manager.h  keyboard_controller.h
include/ECS/Components/: collision_component.h  component_helper_t.h  components.h  random_movement_component.h  sprite_component.h  tile_component.h  transform_component.h
include/ECS/Objects/: tile_entity.h
include/entities/: enemy.h  player.h
include/physics/: collision.h
include/utils/: files.h  vector2d.h
lib/: CMakeLists.txt
lib/SDL2/: CMakeLists.txt
lib/SDL2/include/SDL2/: SDL_hints.h  SDL_rwops.h
lib/nlohmann/: CMakeLists.txt
res/assets/: mago1.lst
res/entities/: mage_base.per
res/maps/: map_prueba.res
res/stage/: stage1.stg
res/visual/: asset_list
res/visual/asset/: mago1.lst
src/: asset_manager.cpp  entity.cpp  entity.h  g_constants.cpp  game.cpp  game.h  game_map.cpp  game_map.h  main.cpp  renderer.cpp  texture_manager.cpp  texture_manager.h
src/ECS/: ECS.cpp  ECS.h  animation.h  asset_manager.cpp  asset_manager.h  entity_manager.cpp  entity_manager.h  keyboard_controller.h
src/ECS/Components/: collision_component.cpp  collision_component.h  components.h  sprite_component.cpp  sprite_component.h  tile_component.h  transform_component.cpp  transform_component.h
src/entities/: enemy.cpp  enemy.h  player.h
src/physics/: collision.cpp  collision.h
src/utils/: files.cpp
